checked few layouts and made corrections

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nimgade.pk.mytutorialapplication">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -43,7 +45,15 @@
         </activity>
         <activity
             android:name="activities.list.first.DroppingViewActivity"
-            android:label="@string/title_activity_dropping_view"></activity>
+            android:label="@string/title_activity_dropping_view" />
+        <activity
+            android:name="activities.list.first.CustomListViewActivity"
+            android:label="@string/title_activity_custom_list_view"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.nimgade.pk.mytutorialapplication.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
