--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -171,8 +171,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="services.list.activity.ServicesListActivity" />
         </activity>
-        <service android:name="services.list.activity.ServiceTestOneActivity$MyServiceTestOne"
-            android:exported="false"/>
+
+        <service
+            android:name="services.list.activity.ServiceTestOneActivity$MyServiceTestOne"
+            android:exported="false" />
+
         <activity
             android:name="activities.list.first.RandomTestActivity"
             android:label="@string/title_activity_random_test"
@@ -205,6 +208,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="spinner.list.activities.SpinnerListActivity" />
+        </activity>
+        <activity
+            android:name="services.list.activity.ServiceTestTwoActivity"
+            android:label="@string/title_activity_service_test_two"
+            android:parentActivityName="services.list.activity.ServicesListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="services.list.activity.ServicesListActivity" />
         </activity>
     </application>
 
