--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -217,6 +217,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="services.list.activity.ServicesListActivity" />
         </activity>
+
+        <service
+            android:name="services.list.activity.ServiceTestTwoActivity$HelloService"
+            android:exported="false" />
     </application>
 
 </manifest>
