--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name="model.classes.StartUp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -237,6 +238,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.nimgade.pk.mytutorialapplication.MainActivity" />
+        </activity>
+        <activity
+            android:name="listview.test.activities.SqliteTestOneActivity"
+            android:label="@string/title_activity_sqlite_test_one"
+            android:parentActivityName="sqlite.list.activity.SqliteListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="sqlite.list.activity.SqliteListActivity" />
         </activity>
     </application>
 
