tested the style for the textView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -247,6 +247,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="sqlite.list.activity.SqliteListActivity" />
         </activity>
+        <activity
+            android:name="activities.list.first.TestTextViewActivity"
+            android:label="@string/title_activity_test_text_view"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.nimgade.pk.mytutorialapplication.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
