--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         }
     }
 
-    lintOptions{
+    lintOptions {
         quiet true
 
         abortOnError false
@@ -39,6 +39,8 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'org.apache.commons:commons-io:1.3.2'
     compile 'com.android.support:support-annotations:23.1.1'
+    compile 'com.google.android.gms:play-services:8.4.0'
 }
+
 
 
