--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,8 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -30,11 +32,12 @@ android {
 dependencies {
     provided fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:support-annotations:23.1.1'
-    compile 'com.android.support:design:23.1.1'
     compile('com.android.support:appcompat-v7:23.1.1') {
         exclude group: 'com.android.support', module: 'support-v4'
     }
+    compile files('libs/gizmorph.jar')
+    compile 'com.android.support:support-annotations:23.1.1'
+    compile 'com.android.support:design:23.1.1'
     compile 'com.google.code.gson:gson:2.5'
     compile 'org.apache.httpcomponents:httpcomponents-core:4.4.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -42,7 +45,15 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'org.apache.commons:commons-io:1.3.2'
     compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile 'com.google.android.gms:play-services-auth:8.4.0'
+    compile 'com.google.android.gms:play-services-gcm:8.4.0'
+    compile 'com.android.support:multidex:1.0.0'
+
 }
+
+
+
 
 
 
