--- a/readingexcel/build.gradle
+++ b/readingexcel/build.gradle
@@ -6,4 +6,5 @@ dependencies {
     compile files('src/main/java/libs/poi-ooxml-3.13-20150929.jar')
     compile files('src/main/java/libs/poi-ooxml-schemas-3.13-20150929.jar')
     compile files('src/main/java/libs/xmlbeans-2.6.0.jar')
+    compile files('src/main/java/libs/simple-xml-2.7.1.jar')
 }
